Font and spacing fixes for open data site

--- a/less/components/header.less
+++ b/less/components/header.less
@@ -7,11 +7,22 @@
   }
   .header-content {
     margin: 0 20px;
-    text-align: center;
+    text-align: left;
     .header-content-container {
       margin: 20px auto;
-      width: 100%;
-      max-width: 480px;
+      width: 60%;
+      min-width: 300px;
+      max-width: 650px;
+      h1 {
+        font-size: 2.3rem;
+        font-weight: 400;
+        letter-spacing: -0.075rem;
+      }
+      @media screen and (max-width: 400px) {
+        h1 {
+          font-size: 1.5rem;
+        }
+      }
     }
   }
   @media screen and (min-width: 992px) {
